--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
-Redstone restocking.
-Nicer formatted in game text.
+Redstone restocking
+Nicer formatted in game text
 Permissions support
+Individual player timing
+Clear chest if player is not allowed a restock
+Open a new inventory with the restocked contents.
