--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 Version 2.0-dev
     Fixed item data issue.  Item data is now given to restocked items!
+    Now requires BukkitContrib.  This will be automatically downloaded if you do not already have it installed.
+    Prettied up the in game text a little bit.  Now uses a language file.  Feel free to translate it to other languages!
+    Added a timer that saves data at a configurable interval.
 
 Version 1.1
     Added option to make chest indestructible to anyone but ops.  This will also cause explosions that hit them to be cancelled completely.
