--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 Redstone restocking
-Nicer formatted in game text
+Nicer formatted in game text (added in 2.0)
 Permissions support
 Individual player timing
 Clear chest if player is not allowed a restock
 Open a new inventory with the restocked contents.
 Only restock on server restart option
+Need to finish conversion code
