--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -1,2 +1,2 @@
 cmd.in_game_only=You may only use this command in game!
-cmd.set.unknown_prop="'%1' is not a valid chest property!"
+cmd.set.unknown_prop=''{0}'' is not a valid chest property!
